This file contains a high-level description of this package's evolution.
Entries are in reverse chronological order (most recent first).

VERSION         COMMENTS
-------         --------
4.1.3		2011-04-25

		 Changed setting for H5Pset_libver_bounds to ensure
		 that all netCDF-4 files can be read by HDF5 1.8.x.

		 Merged libncdap3 and libncdap4 into new libdap2 library.
                 The suffix dap2 now refers to the dap protocol. This is
                 in prep for adding dap4 protocol support.

4.1.2          2011-03-29

	        Changes in build system to support building dlls on
	        cygwin/mingw32.

		Changes to fix portability problems and get things
		running on all test platforms.

		Some minor documentation fixes.

		Fixed opendap performance bug for nc_get_vars; required
                adding nc_get_var{s,m} to the dispatch table.

	        Now check for libz in configure.ac.

	        Fixed some bugs and some performance problems with
	        default chunksizes.

4.1.2-beta2    2011-01-11

	        Add "-c" option to nccopy to specify chunk sizes used
		in output in terms of list of dimension names.

	        Rewrite netCDF-4 attribute put code for a large
		speedup when writing lots of attributes.

		Fix nc-config --libs when static dependent libraries
		are not installed in the same directory as netCDF
		libraries (thanks to Jeff Whitaker).

		Build shared libraries by default, requiring separate
		Fortran library.  Static libraries now built only with
		--disable-shared.

	        Refactor of HDF5 file metadata scan for large speedup
	        in opening files, especially large files.

		Complete rewrite of the handling of character datalist
		constants. The heuristics are documented in ncgen.1.

	        Eliminate use of NC_MAX_DIMS and NC_MAX_VARS in ncdump
	        and nccopy, allocating memory as needed and reducing
	        their memory footprint.

		Add documentation for new nc_inq_path() function.
